--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt-validate": "^1.0.1",
     "vee-validate": "^3.2.1",
     "vue": "^2.6.11",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
