feature: finished all features and added animations

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 NODE_ENV=production
 NUXT_ENV_HOST=http://portfolio.haiyima.com
 NUXT_ENV_API_URL=http://portfolio-backend.haiyima.com
+NUXT_ENV_CLIENT_ID=4
+NUXT_ENV_CLIENT_SECRET=rmOloLC5ZU2IT8PkhWPCH5Bo4mjSmmjVPkq8ADT5
