--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Portfolio",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "This is the portfolio of Haiyi",
   "author": "Haiyi",
