--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@nuxtjs/axios": "^5.3.6",
     "bootstrap-vue": "^2.1.0",
     "dotenv": "^8.2.0",
+    "intersection-observer": "^0.7.0",
     "nuxt": "^2.11.0",
     "nuxt-fontawesome": "^0.4.0",
+    "nuxt-polyfill": "^1.0.3",
     "nuxt-validate": "^1.0.1",
+    "smoothscroll-polyfill": "^0.4.4",
+    "url-polyfill": "^1.1.8",
     "vee-validate": "^3.2.1",
     "vue": "^2.6.11",
     "vuejs-datepicker": "^1.6.2",
