--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "node-sass": "^4.13.1",
+    "sass": "^1.62.1",
     "sass-loader": "^7.3.1"
   }
 }
